--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link type="image/png" sizes="32x32" rel="icon" href="./src/assets/Favicon/news-32.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>News Monkey | News Providing Website</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link type="image/png" sizes="32x32" rel="icon" href="./src/assets/Favicon/news-32.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Stay informed with the latest trending news from around the world. Our news app delivers real-time updates on breaking stories, curated to match your interests. Explore in-depth articles and stay ahead of the conversation.">
+  <title>News Monkey | News Providing Website</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
